--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -527,19 +527,20 @@ html, body {
 /* FOOTER
 ================================================== */
 .site-footer {
-    position: fixed;
+    position:relative;
     bottom: 0;
-    padding: 30px 0;
+    padding: 30px 200px;
     width: 100%;
-    background-color: #212121;
+    background: linear-gradient(to left, #ffffff, #dfdddd, #edeaea, #dfdddd, #ffffff);
+    background: linear-gradient(to top, #dcdcdc, #ffffff);
     z-index: -1;
 }
 
 .icon {
     line-height: 40px;
     padding: 9px 11px;
-    color: #fff;
-    border: 1px solid #fff;
+    color: #000000;
+    border: 1px solid #000000;
     border-radius: 50%;
 }
 
@@ -565,13 +566,13 @@ html, body {
 
 a.twitter-bg:hover {color: #55acee;}
 a.facebook-bg:hover{color: #3b5998;}
-a.gplus-bg:hover{color: #007bb5;} 
-a.linkedin-bg:hover {color: #dd4b39;}
+a.linkedin-bg:hover{color: #007bb5;} 
+a.gplus-bg:hover {color: #dd4b39;}
 a.icon-up-bg:hover {color: #212121;}
 
 .copyright {
     margin-bottom: 0;
     line-height: 40px;
-    color: #fff;
+    color: #000000;
     text-align: center;
 }
