--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,8 +531,8 @@ html, body {
     bottom: 0;
     padding: 30px 200px;
     width: 100%;
-    background: linear-gradient(to left, #ffffff, #dfdddd, #edeaea, #dfdddd, #ffffff);
-    background: linear-gradient(to top, #dcdcdc, #ffffff);
+    background: #fff;
+    background: #fff;
     z-index: -1;
 }
 
